--- a/IdentityServer/MultiShop.IdentityServer/Properties/launchSettings.json
+++ b/IdentityServer/MultiShop.IdentityServer/Properties/launchSettings.json
@@ -6,18 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5001"
-    },
-    //Silebilirim - core sürümüne göre.
-    "WSL": {
-      "commandName": "WSL2",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:5001",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://localhost:5001"
-      },
-      "distributionName": ""
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
