Discount için token

--- a/Services/Discount/MultiShop.Discount/appsettings.json
+++ b/Services/Discount/MultiShop.Discount/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultCollection": "Server=DESKTOP-TFTMSRF; Initial Catalog=MultiShopDiscountDb; Integrated Security=True; TrustServerCertificate=True"
   },
+  "IdentityServerUrl": "http://localhost5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
